Implements adaptive, swiper on mobile and fixes bugs

--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,125 @@ ul {
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
+
+@media (max-height: 749.9px) {
+  .promo {
+    min-height: 650px;
+  }
+
+  .slides-container__title {
+    font-size: 100px;
+    line-height: 100px;
+    margin-bottom: 40px;
+  }
+
+  .slide-bg {
+    height: 450px;
+    width: 50%;
+  }
+}
+
+@media (max-width: 992px) {
+  .mouse {
+    display: none;
+  }
+
+  *,
+  *::after,
+  *::before {
+    box-sizing: border-box;
+    cursor: auto !important;
+  }
+
+  .preloader__forward {
+    width: 500px;
+    text-align: center;
+    font-size: 55px;
+    line-height: 70px;
+  }
+
+  .designers-info__image {
+    width: 40%;
+    min-width: 150px;
+  }
+}
+
+@media (max-width: 768px) {
+  .promo {
+    padding-top: 100px;
+    height: auto;
+    min-height: 100vh;
+  }
+
+  .wrapper {
+    flex-direction: column-reverse;
+    justify-content: initial;
+  }
+
+  .promo__title {
+    display: none;
+  }
+
+  .slides-container__slide--active {
+    position: relative;
+  }
+
+  .slides-container__slide {
+    top: -90px;
+  }
+
+  .slide-bg {
+    width: 100%;
+    height: 350px;
+    margin-left: 0;
+  }
+
+  .slides-container__left {
+    width: 100%;
+    padding-top: 0;
+  }
+
+  .shapes {
+    display: none;
+  }
+
+  .designers-info__image {
+    width: auto;
+  }
+
+  .page-header__nav {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .slide-bg {
+    height: 250px;
+  }
+
+  .slides-container__title {
+    font-size: 80px;
+    line-height: 80px;
+  }
+
+  .preloader__forward {
+    width: 90%;
+    font-size: 39px;
+    line-height: 45px;
+  }
+}
+
+@media (max-width: 420px) {
+  .slides-container__title {
+    font-size: 60px;
+    line-height: 70px;
+  }
+
+  .slides-container__slide {
+    top: -65px;
+  }
+
+  .designers-info__image {
+    width: 40%;
+  }
+}
